@@ -1,4 +1,24 @@
 #!/bin/bash
+#
+# Copyright (c) 2015 The JobX Project
+#
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements. See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership. The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License. You may obtain a copy of the License at
+#
+#   http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied. See the License for the
+# specific language governing permissions and limitations
+# under the License.
+#
 
 #echo color
 WHITE_COLOR="\E[1;37m";
@@ -11,97 +31,36 @@ RES="\E[0m";
 echo_r () {
     # Color red: Error, Failed
     [ $# -ne 1 ] && return 1
-    printf "[${BLUE_COLOR}opencron${RES}] ${RED_COLOR}$1${RES}\n"
+    printf "[${BLUE_COLOR}jobx${RES}] ${RED_COLOR}$1${RES}\n"
 }
 
 echo_g () {
     # Color green: Success
     [ $# -ne 1 ] && return 1
-    printf "[${BLUE_COLOR}opencron${RES}] ${GREEN_COLOR}$1${RES}\n"
+    printf "[${BLUE_COLOR}jobx${RES}] ${GREEN_COLOR}$1${RES}\n"
 }
 
 echo_y () {
     # Color yellow: Warning
     [ $# -ne 1 ] && return 1
-    printf "[${BLUE_COLOR}opencron${RES}] ${YELLOW_COLOR}$1${RES}\n"
+    printf "[${BLUE_COLOR}jobx${RES}] ${YELLOW_COLOR}$1${RES}\n"
 }
 
 echo_w () {
     # Color yellow: White
     [ $# -ne 1 ] && return 1
-    printf "[${BLUE_COLOR}opencron${RES}] ${WHITE_COLOR}$1${RES}\n"
+    printf "[${BLUE_COLOR}jobx${RES}] ${WHITE_COLOR}$1${RES}\n"
 }
 
-# Make sure prerequisite environment variables are set
 if [ -z "$JAVA_HOME" -a -z "$JRE_HOME" ]; then
-  if $darwin; then
-    # Bugzilla 54390
-    if [ -x '/usr/libexec/java_home' ] ; then
-      export JAVA_HOME=`/usr/libexec/java_home`
-    # Bugzilla 37284 (reviewed).
-    elif [ -d "/System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK/Home" ]; then
-      export JAVA_HOME="/System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK/Home"
-    fi
-  else
-    JAVA_PATH=`which java 2>/dev/null`
-    if [ "x$JAVA_PATH" != "x" ]; then
-      JAVA_PATH=`dirname $JAVA_PATH 2>/dev/null`
-      JRE_HOME=`dirname $JAVA_PATH 2>/dev/null`
-    fi
-    if [ "x$JRE_HOME" = "x" ]; then
-      # XXX: Should we try other locations?
-      if [ -x /usr/bin/java ]; then
-        JRE_HOME=/usr
-      fi
-    fi
-  fi
-  if [ -z "$JAVA_HOME" -a -z "$JRE_HOME" ]; then
     echo_r "Neither the JAVA_HOME nor the JRE_HOME environment variable is defined"
     echo_r "At least one of these environment variable is needed to run this program"
     exit 1
-  fi
-fi
-if [ -z "$JAVA_HOME" -a "$1" = "debug" ]; then
-  echo_r "JAVA_HOME should point to a JDK in order to run in debug mode."
-  exit 1
-fi
-if [ -z "$JRE_HOME" ]; then
-  JRE_HOME="$JAVA_HOME"
-fi
-
-# If we're running under jdb, we need a full jdk.
-if [ "$1" = "debug" ] ; then
-  if [ "$os400" = "true" ]; then
-    if [ ! -x "$JAVA_HOME"/bin/java -o ! -x "$JAVA_HOME"/bin/javac ]; then
-      echo_r "The JAVA_HOME environment variable is not defined correctly"
-      echo_r "This environment variable is needed to run this program"
-      echo_r "NB: JAVA_HOME should point to a JDK not a JRE"
-      exit 1
-    fi
-  else
-    if [ ! -x "$JAVA_HOME"/bin/java -o ! -x "$JAVA_HOME"/bin/jdb -o ! -x "$JAVA_HOME"/bin/javac ]; then
-      echo_r "The JAVA_HOME environment variable is not defined correctly"
-      echo_r "This environment variable is needed to run this program"
-      echo_r "NB: JAVA_HOME should point to a JDK not a JRE"
-      exit 1
-    fi
-  fi
-fi
-
-# Don't override the endorsed dir if the user has set it previously
-if [ -z "$JAVA_ENDORSED_DIRS" ]; then
-  # Set the default -Djava.endorsed.dirs argument
-  JAVA_ENDORSED_DIRS="$OPENCRON_HOME"/endorsed
 fi
 
 # Set standard commands for invoking Java, if not already set.
 if [ -z "$RUNJAVA" ]; then
-  RUNJAVA="$JRE_HOME"/bin/java
-fi
-if [ "$os400" != "true" ]; then
-  if [ -z "$_RUNJDB" ]; then
-    _RUNJDB="$JAVA_HOME"/bin/jdb
-  fi
+  RUNJAVA="$JAVA_HOME"/bin/java
 fi
 
 #check java exists.
@@ -146,19 +105,18 @@ PRGDIR=`dirname "$PRG"`
 
 WORKDIR=`cd "$PRGDIR" >/dev/null; pwd`;
 
-APP_ARTIFACT=opencron-server
-
-APP_VERSION="1.1.0-RELEASE";
-
-APP_WAR_NAME=${APP_ARTIFACT}.war
-
+# Get standard environment variables
+###############################################################################################
+APP_ARTIFACT=jobx-server
+APP_VERSION="1.2.0-RELEASE";
+APP_WAR_NAME=${APP_ARTIFACT}-${APP_VERSION}.war
 MAVEN_TARGET_WAR="${WORKDIR}"/${APP_ARTIFACT}/target/${APP_WAR_NAME}
-
 DIST_PATH=${WORKDIR}/dist/
+###############################################################################################
 
 [ ! -d "${DIST_PATH}" ] && mkdir -p "${DIST_PATH}"
 
-DEPLOY_PATH=${WORKDIR}/dist/opencron-server
+DEPLOY_PATH=${WORKDIR}/dist/jobx-server
 
 STARTUP_SHELL=${WORKDIR}/${APP_ARTIFACT}/startup.sh
 
@@ -166,7 +124,7 @@ STARTUP_SHELL=${WORKDIR}/${APP_ARTIFACT}/startup.sh
 if [ ! -f "${DIST_PATH}/${APP_WAR_NAME}" ] ; then
     #dist下没有war包则检查server的target下是否有war包.
    if [ ! -f "${MAVEN_TARGET_WAR}" ] ; then
-      echo_w "[opencron] please build project first!"
+      echo_w "[JobX] please build project first!"
       exit 0;
    else
       cp ${MAVEN_TARGET_WAR} ${DIST_PATH};
@@ -182,8 +140,25 @@ cp ${DIST_PATH}/${APP_WAR_NAME} ${DEPLOY_PATH} && cd ${DEPLOY_PATH} && jar xvf $
 cp -r ${WORKDIR}/${APP_ARTIFACT}/work ${DEPLOY_PATH}
 
 #copy startup.sh
-cp  ${STARTUP_SHELL} ${DEPLOY_PATH}
+cp  ${STARTUP_SHELL} ${DEPLOY_PATH} && chmod +x ${DEPLOY_PATH}/startup.sh >/dev/null 2>&1
 
 #startup
-/bin/bash +x "${DEPLOY_PATH}/startup.sh" "$@"
+EXECUTABLE=${DEPLOY_PATH}/startup.sh
 
+# Check that target executable exists
+if $os400; then
+  # -x will Only work on the os400 if the files are:
+  # 1. owned by the user
+  # 2. owned by the PRIMARY group of the user
+  # this will not work if the user belongs in secondary groups
+  eval
+else
+  if [ ! -x "$EXECUTABLE" ]; then
+    echo "Cannot find $EXECUTABLE"
+    echo "The file is absent or does not have execute permission"
+    echo "This file is needed to run this program"
+    exit 1
+  fi
+fi
+
+exec "$EXECUTABLE" "$@"
